[package]
name = "libreplica"
description = "Replication protocols and applications."
version = "0.1.0"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
futures = "0.3.16"
log = "0.4.14"
rand = "0.8.4"
simple_logger = "1.13.0"
