[package]
name = "libreplica"
description = "Replication protocols and applications."
version = "0.1.1"
license = "MIT"
edition = "2018"

[profile.bench]
# lto = true
# codegen-units = 1

[[bench]]
name = "server"
harness = false

[[bench]]
name = "null"
harness = false

[dependencies]
bincode = "1.3.3"
ctrlc = "3.2.0"
derivative = "2.2.0"
futures = "0.3.16"
log = "0.4.14"
quanta = "0.9.2"
rand = "0.8.4"
serde = "1.0.130"
serde_derive = "1.0.130"
toml = "0.5.8"

[dev-dependencies]
clap = "2.33.3"
core_affinity = "0.5.10"
simple_logger = "1.13.0"
